- mu-common: Allow more attributes in embed tag in visual editor (Trello #1297)
- mu-common: Fixed default comment status. Restored default action about comment status parameter (Trello #1365)
- mu-common: Added Automatic creation of featured image (Imatge resum) (Trello #1284)
- xtec-stats: Fixed Javascript error in Safari in statistics page (Trello #1361)


Changes 16.09.19
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.5.4 (Trello #1345)
- GCE: Updated from 2.2.5 (Legacy Google Calendar Events 2.4) to 3.1.2 (Simple Calendar - Google Calendar Plugin) (Trello #1034)
- GCE: Included fix for grouped calendars (Trello #1371)
- grup-classe: Removed option to select format of the calendar due to the changes in GCE v3.x (Trello #1034)
- New users: Fixed URL to change password, which was not being shown in email sent to new users
- blogger-importer: Fixed import of images (Trello #1340)
- xtec-booking: Added plugin for bookings of spaces or equipment (Trello #1166)
- xtec-booking: Included fix for bookings without start and finish hours (Trello #1373)
- Added role Professor (Trello #1166)
- Role Professor: Removed links to comments and tools (Trello #1354)
- Tools: Added custom tool boxes for timetables and events management. Removed bp and categories boxes (Trello #1342)
- buddypress-docs: Fixed upload of image using editor's menu option when creating a new document (Trello #1229)


Changes 16.09.07
---------------------------------------------------------------------------------------
- buddypress-docs: Fixed bug when uploading files when editing them if protocol it is not HTTPS (Trello #1205)


Changes 16.08.22
---------------------------------------------------------------------------------------
- intranet-importer: Fixed import of images with capital letters in extensions
- intranet-importer: Added import of images uploaded using IWforms